<resources>
    <string name="app_name">GuantesApp</string>

    <!--  <string-array name="modelos_guantes">
          <item>Flash</item>
          <item>Blast</item>
          <item>Striker</item>
          <item>Evolution</item>
          <item>Warrior</item>
          <item>Defender</item>
          <item>Premiere</item>
          <item>Profesional</item>
          <item>Guardiano</item>
      </string-array>-->
    <string name="blank">" "</string>
    blank

    <string-array name="tallas_guantes">
        <item></item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>


    <string-array name="cantidad">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share</string>
    <string name="todos_los_modelos">Todos los modelos</string>
    <string name="talla">Talla</string>
    <string name="modelo">Modelo</string>
    <string name="facebook_app_id">1441871215993654</string>
    <string name="nuevo_modelo">Nuevo Modelo:</string>
    <string name="agregar_modelo">Agregar Modelo</string>
    <string name="select">Select</string>
    <string name="cantidad">Cantidad:</string>
    <string name="confirmar_venta">Confirmar Venta</string>
    <string name="escribe_el_mensaje">Escribe el mensaje..</string>
    <string name="other">adjuntar</string>
</resources>
