<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".model.ui.activities.AgregarModelo">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/foto_guante"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:src="@drawable/ic_cloud_upload_black_24dp"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewNuevo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nuevo_modelo"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/nuevoModelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/modelo"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/name_foto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center" />

            <CheckBox
                android:id="@+id/checkNuevo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nuevo_modelo"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            style="@style/myButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/agregar_modelo" />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_margin="20dp"
        android:backgroundTint="@color/translucent"
        android:indeterminateDrawable="@drawable/progress_icon"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.604" />

</androidx.constraintlayout.widget.ConstraintLayout>