<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".model.ui.activities.ActivityVenta">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.842"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.014">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/txtViewGral"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/modelo" />

                        <Spinner
                            android:id="@+id/spModelo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/txtViewGral"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/talla" />

                        <Spinner
                            android:id="@+id/spTalla"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="34dp"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/txtViewGral"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cantidad" />

                        <Spinner
                            android:id="@+id/spCantidad"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="9dp"
                            android:textAlignment="center" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <GridView
            android:id="@+id/gridView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:listSelector="@drawable/states_gridview"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:columnWidth="200dp"
            android:gravity="center"
            android:numColumns="2" />

        <Button
            android:id="@+id/addVenta"
            style="@style/myButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/confirmar_venta" />
    </LinearLayout>


    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/progress"
        style="@style/SpinKitView.FadingCircle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/translucent"
        android:elevation="1dp"
        android:visibility="invisible"
        app:SpinKit_Color="@color/naranaja"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>